--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1273,6 +1273,7 @@ jobs:
 
       # 29. Create 'cat' Source (Strict 1-char variables)
       # 29. Create 'cat' Source (Strict Formatting Fix)
+        # 29. Create 'cat' Source (Strict Formatting Fix 2)
     - name: 29. Create Cat Source
       run: |
         cat <<EOF > cat_spec.py1
@@ -1281,7 +1282,6 @@ jobs:
         @v 追 'append'
         @v 字 'str'
         @v 結 '"\n".join'
-
         @v 置 '"M"+"O"+"V"'
         @v 取 '"L"+"E"+"A"'
         @v 呼 '"C"+"A"+"L"+"L"'
@@ -1294,7 +1294,6 @@ jobs:
         @v 飛 '"J"+"M"+"P"'
         @v 加 '"A"+"D"+"D"'
         @v 押 '"P"+"U"+"S"+"H"'
-
         @v 壱 '"R"+"B"+"X"'
         @v 弐 '"R"+"1"+"2"'
         @v 繰 '"R"+"C"+"X"'
@@ -1303,30 +1302,20 @@ jobs:
         @v 苦 '"R"+"9"'
         @v 蓄 '"R"+"A"+"X"'
         @v 肆 '"R"+"1"+"3"'
-
         @v 蔵 '"k"+"e"+"r"+"n"+"e"+"l"+"3"+"2"+"."+"d"+"l"+"l"'
         @v 出 '"G"+"e"+"t"+"S"+"t"+"d"+"H"+"a"+"n"+"d"+"l"+"e"'
         @v 記 '"W"+"r"+"i"+"t"+"e"+"F"+"i"+"l"+"e"'
         @v 終 '"E"+"x"+"i"+"t"+"P"+"r"+"o"+"c"+"e"+"s"+"s"'
-        
-        # New APIs
         @v 開 '"_"+"s"+"y"+"s"+"_"+"o"+"p"+"e"+"n"'
         @v 読 '"R"+"e"+"a"+"d"+"F"+"i"+"l"+"e"'
         @v 寸 '"G"+"e"+"t"+"F"+"i"+"l"+"e"+"S"+"i"+"z"+"e"'
         @v 閉 '"C"+"l"+"o"+"s"+"e"+"H"+"a"+"n"+"d"+"l"+"e"'
-
-        # Target Filename (fizzbuzz_native.asm)
-        # We will write this char by char
-        
-        # Buffers & Consts
         @v 壺 '"1"+"0"+"0"'
         @v 地 '"2"+"0"+"0"'
         @v 無 '"0"'
         @v 負 '"-"+"1"'
         @v 空 '" "'
         @v 〆 '"0"'
-
-        # Char codes
         @v 譜 '"1"+"0"+"2"'
         @v 伊 '"1"+"0"+"5"'
         @v 豆 '"1"+"2"+"2"'
@@ -1341,13 +1330,9 @@ jobs:
         @v ド '"4"+"6"'
         @v 須 '"1"+"1"+"5"'
         @v 矛 '"1"+"0"+"9"'
-
-        # StdOut Handle Const (-11)
         @v 陰 '"-"+"1"+"1"'
-
         $
         コ = []
-
         # --- Init ---
         # Prepare Filename at address 100 "fizzbuzz_native.asm"
         コ.追(書 + 空 + 壺 + 空 + 譜)
@@ -1370,56 +1355,41 @@ jobs:
         コ.追(書 + 空 + 字(117) + 空 + 須)
         コ.追(書 + 空 + 字(118) + 空 + 矛)
         コ.追(書 + 空 + 字(119) + 空 + 〆)
-
         # Get StdOut Handle
-        # HANDLE GetStdHandle(DWORD nStdHandle)
-        # STD_OUTPUT_HANDLE = -11
         コ.追(置 + 空 + 繰 + 空 + 陰)
         コ.追(呼 + 空 + 出)
-        
         # Save StdOut Handle to R13 (肆)
-        コ.追(置 + 空 + 肆 + 空 + 蓄) 
-
+        コ.追(置 + 空 + 肆 + 空 + 蓄)
         # Open File
-        # _sys_open(RCX=FilenameAddr)
         コ.追(置 + 空 + 繰 + 空 + 壺)
         コ.追(取 + 空 + 繰 + 空 + 壺)
         コ.追(呼 + 空 + 開)
         コ.追(置 + 空 + 壱 + 空 + 蓄)
-
         # Get File Size
-        # GetFileSize(Handle, NULL)
         コ.追(置 + 空 + 繰 + 空 + 壱)
         コ.追(置 + 空 + タ + 空 + 無)
         コ.追(呼 + 空 + 寸)
         コ.追(置 + 空 + 弐 + 空 + 蓄)
-
         # Read File
-        # ReadFile(Handle, Buffer, Size, &BytesRead, NULL)
         コ.追(置 + 空 + 繰 + 空 + 壱)
         コ.追(取 + 空 + タ + 空 + 地)
         コ.追(置 + 空 + 蜂 + 空 + 弐)
         コ.追(取 + 空 + 苦 + 空 + 壺)
         コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 読)
-
         # Write to StdOut
-        # WriteFile(StdOut, Buffer, Size, &BytesWritten, NULL)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 地)
         コ.追(置 + 空 + 蜂 + 空 + 弐)
         コ.追(取 + 空 + 苦 + 空 + 壺)
         コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 記)
-
         # Close Handle
         コ.追(置 + 空 + 繰 + 空 + 壱)
         コ.追(呼 + 空 + 閉)
-
         # Exit
         コ.追(置 + 空 + 繰 + 空 + 無)
         コ.追(呼 + 空 + 終)
-
         表(結(コ))
         EOF
 
