--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1331,6 +1331,7 @@ jobs:
         @v 須 '"1"+"1"+"5"'
         @v 矛 '"1"+"0"+"9"'
         @v 陰 '"-"+"1"+"1"'
+        @v コ 'codes'
         $
         コ = []
         コ.追(書 + 空 + 壺 + 空 + 譜)
