--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1094,6 +1094,7 @@ jobs:
     # ---------------------------------------------------
 
         # 28. Update Native Compiler (Fix: Stack Alignment & Shadow Space)
+        # 28. Update Native Compiler (Fix: Safe Stack Wrapper for CreateFile)
     - name: 28. Update Native Compiler (Add File I/O)
       run: |
         cat <<EOF > compiler_native.py1
@@ -1135,10 +1136,11 @@ jobs:
         @v 加 '"A"+"D"+"D"'
         @v 押 '"P"+"U"+"S"+"H"'
 
-        # Header: Ensure 16-byte alignment and sufficient shadow space
-        @v 頭 '"default rel\nsection .text\n  global start\n  extern GetStdHandle\n  extern WriteFile\n  extern ExitProcess\n  extern CreateFileA\n  extern ReadFile\n  extern GetFileSize\n  extern CloseHandle\n\nstart:\n  sub rsp, 8\n  and rsp, -16\n  sub rsp, 120\n  jmp main_logic\n\n_sys_open:\n  ; CreateFileA wrapper\n  mov rdx, 0x80000000\n  mov r8, 1\n  xor r9, r9\n  mov qword [rsp+32], 3\n  mov qword [rsp+40], 128\n  mov qword [rsp+48], 0\n  call CreateFileA\n  ret\n\nmain_logic:\n"'
+        # Header: Safe wrapper for CreateFileA
+        # _sys_open: RCX = Filename Address (LEA'd by caller)
+        @v 頭 '"default rel\nsection .text\n  global start\n  extern GetStdHandle\n  extern WriteFile\n  extern ExitProcess\n  extern CreateFileA\n  extern ReadFile\n  extern GetFileSize\n  extern CloseHandle\n\nstart:\n  sub rsp, 8\n  and rsp, -16\n  sub rsp, 256\n  jmp main_logic\n\n_sys_open:\n  ; CreateFileA wrapper\n  ; RCX is already Filename\n  mov rdx, 0x80000000 ; GENERIC_READ\n  mov r8, 1           ; FILE_SHARE_READ\n  xor r9, r9          ; SecurityAttributes = NULL\n  mov qword [rsp+32], 3   ; OPEN_EXISTING\n  mov qword [rsp+40], 128 ; FILE_ATTRIBUTE_NORMAL\n  mov qword [rsp+48], 0   ; TemplateFile = NULL\n  call CreateFileA\n  ret\n\nmain_logic:\n"'
         
-        @v 尾 '"  add rsp, 120\n  ret\n\nsection .bss\n  mem_base resb 65536\n"'
+        @v 尾 '"  add rsp, 256\n  ret\n\nsection .bss\n  mem_base resb 65536\n"'
 
         @v 改 '"\n"'
         @v 空 '" "'
@@ -1268,6 +1270,7 @@ jobs:
 
         # Re-compile the native compiler script
         python stage2_compiler.py compiler_native.py1 > compiler_native.py
+
 
 
       # 29. Create 'cat' Source (Strict 1-char variables)
